...
      {Platform.OS === 'ios' && <ToastViewport multipleToasts={false} left={0} right={0} />}

      <AnalysisDetails recipient={recipientData} contract={contractData} threat={threatData} safeTx={safeTx} />

      <View flexDirection="row" width="100%" gap="$1" marginTop={-4} justifyContent="center" alignItems="center">
        <Text fontSize="$2" color="$colorSecondary">
          Secured by
        </Text>

        <Image src={require('@/assets/images/safe-shield-logo.png')} width={77} objectFit="contain" />
      </View>
    </SafeBottomSheet>
  )
...
