...
      <Stack.Screen name="change-signer-sheet" options={transparentModalOptions} />
      <Stack.Screen name="change-estimated-fee-sheet" options={transparentModalOptions} />
      <Stack.Screen name="edit-approval-sheet" options={transparentModalOptions} />
      <Stack.Screen name="how-to-execute-sheet" options={transparentModalOptions} />
      <Stack.Screen name="notifications-opt-in" options={hiddenHeaderModalOptions} />
      <Stack.Screen name="biometrics-opt-in" options={hiddenHeaderModalOptions} />
      <Stack.Screen name="confirm-transaction" options={{ title: 'Confirm transaction' }} />
      <Stack.Screen name="review-and-confirm" options={{ title: 'Review and confirm' }} />
      <Stack.Screen name="review-and-execute" options={{ title: 'Review and execute' }} />
      <Stack.Screen name="currency" options={{ headerShown: true, title: 'Currency' }} />
      <Stack.Screen name="share" options={{ headerShown: false, presentation: 'modal' }} />
      <Stack.Screen name="manage-tokens-sheet" options={transparentModalOptions} />
      <Stack.Screen name="protocol-detail-sheet" options={transparentModalOptions} />
      <Stack.Screen name="signing-error" options={{ headerShown: false, presentation: 'modal' }} />
...
