...
        ))}
      </YStack>
    )
  }

  return (
    <Container testID="balance-change-block">
      <XStack gap="$2" alignItems="center">
        <InfoSheet title="Balance change" info={BALANCE_CHANGE_INFO}>
          <XStack alignItems="center" gap="$1">
            <Text fontWeight="700">Balance change</Text>
            <SafeFontIcon name="info" size={16} color="$colorSecondary" />
          </XStack>
        </InfoSheet>
      </XStack>
...
